lab1/Test/L1-A-3-30.output
Error Type A at Line 3
Error Type B at Line 5
Error Type A at Line 14
Error Type A at Line 24
Error Type B at Line 31
Error Type B at Line 33
Error Type A at Line 35
Error Type B at Line 37
Error Type B at Line 43
